fix flexwrap

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -9,6 +9,7 @@ h1
     margin-bottom: 5px
     display: flex
     justify-content: center
+    margin: 0px 0px 50px
 
 .return_main
     margin: 20px 20px
@@ -24,7 +25,8 @@ h1
     display: flex
 
 // index.html
-
+.header_index
+    background-color: white
 .projects_cards
     display: flex
     justify-content: center
@@ -35,17 +37,17 @@ h1
 
 .click_card
     margin-left: 10px
+    margin-bottom: 10px
     display: flex
     flex-direction: column
     align-items: center
-    max-width: 10%
-    max-height: 10%
+    max-width: 200px
+    max-height: 300px
     text-decoration: none
     color: white
     background-color: black
     font-size: 20px
     font-weight: bold
-    border: 1px solid black
     padding: 0px
     border-radius: 10px
 /* Секундомер */
